force-app/main/default/objects/TestData__c/TestData__c.object-meta.xml
<CustomObject>
    <description>CCA HW11, Custom sObj for testing (Leads only in this HW).  Used in</description>
    <label>TestData</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>TestData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>