force-app/main/default/objects/TestData__c/fields/AssertedOutcome__c.field-meta.xml
<CustomField>
    <fullName>AssertedOutcome__c</fullName>
    <label>AssertedOutcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>