force-app/main/default/objects/TestData__c/fields/AssertedValue__c.field-meta.xml
<CustomField>
    <fullName>AssertedValue__c</fullName>
    <label>AssertedValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>