force-app/main/default/objects/TestData__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <label>FieldValue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>