force-app/main/default/objects/TestData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>FieldValue__c</columns>
    <columns>AssertedValue__c</columns>
    <columns>AssertedOutcome__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>