force-app/main/default/objects/TestData__c/listViews/CCA_HW11.listView-meta.xml
<ListView>
    <fullName>CCA_HW11</fullName>
    <columns>NAME</columns>
    <columns>sObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>FieldValue__c</columns>
    <columns>AssertedValue__c</columns>
    <columns>AssertedOutcome__c</columns>
    <filterScope>Everything</filterScope>
    <label>CCA_HW11</label>
</ListView>